# FlowBee

./: .env  README.md
Backend/: DB.py  SaveCSV.py  Scrapper.py  Source.py  post_data.csv
Backend/FlowBee/: pyproject.toml
Backend/FlowBee/Project/: DB.py  SaveCSV.py  Scrapper.py  Source.py
Backend/myenv/: pyvenv.cfg
